// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Column /> renders a column with optional props 1`] = `
.c0 {
  width: 8.333333333333332%;
  margin-left: 8.333333333333332%;
  padding: 0 0.25rem;
}

<component__Column
  columns={1}
  gutter={true}
  offset={1}
>
  <StyledComponent
    columns={1}
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "_foldedDefaultProps": Object {
          "columns": 12,
          "offset": 0,
        },
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "component__Column-sc-1k2wwm1-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "width:",
            [Function],
            "%;margin-left:",
            [Function],
            "%;padding:",
            [Function],
            ";",
          ],
        },
        "displayName": "component__Column",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "component__Column-sc-1k2wwm1-0",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    gutter={true}
    offset={1}
  >
    <div
      className="c0"
      offset={1}
    />
  </StyledComponent>
</component__Column>
`;

exports[`<Column /> renders a column with required props 1`] = `
.c0 {
  width: 8.333333333333332%;
  margin-left: 0%;
}

<component__Column
  columns={1}
  offset={0}
>
  <StyledComponent
    columns={1}
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "_foldedDefaultProps": Object {
          "columns": 12,
          "offset": 0,
        },
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "component__Column-sc-1k2wwm1-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "width:",
            [Function],
            "%;margin-left:",
            [Function],
            "%;padding:",
            [Function],
            ";",
          ],
        },
        "displayName": "component__Column",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "component__Column-sc-1k2wwm1-0",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    offset={0}
  >
    <div
      className="c0"
      offset={0}
    />
  </StyledComponent>
</component__Column>
`;
